tests/bug_detector_tests/loc2.js
var y = f().a;
var x = g();
function f() {}

